working remote server commit